force-app/main/default/objects/Linehaul__c/Linehaul__c.object-meta.xml
<CustomObject>
    <label>Master AWB</label>
    <nameField>
        <displayFormat>LH-{00000}</displayFormat>
        <label>Linehaul Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master AWB</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>