force-app/main/default/objects/Linehaul__c/fields/AirLine__c.field-meta.xml
<CustomField>
    <fullName>AirLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AirLine</label>
    <referenceTo>AirLine1__c</referenceTo>
    <relationshipName>Book_AWBs</relationshipName>
    <type>Lookup</type>
</CustomField>