force-app/main/default/objects/Linehaul__c/fields/AirLine_Name__c.field-meta.xml
<CustomField>
    <fullName>AirLine_Name__c</fullName>
    <formula>IF(Flight_No_for_SpiceJet_Indigo__r.Airline_Name1__c == &apos;SPICEJET&apos;,&apos;SPICEJET&apos;,
			IF(Flight_No_for_SpiceJet_Indigo__r.Airline_Name1__c == &apos;Indigo&apos;,&apos;Indigo&apos;,
			IF(ISPICKVAL(Select_Airline__c,&apos;Indigo&apos;),&apos;Indigo&apos;,&apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AirLine Name</label>
    <type>Text</type>
</CustomField>