force-app/main/default/objects/Linehaul__c/fields/AWB_Consumed__c.field-meta.xml
<CustomField>
    <fullName>AWB_Consumed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AWB Consumed</label>
    <type>Checkbox</type>
</CustomField>