force-app/main/default/objects/Linehaul__c/fields/AWB_Prefix__c.field-meta.xml
<CustomField>
    <fullName>AWB_Prefix__c</fullName>
    <defaultValue>&apos;312&apos;</defaultValue>
    <label>AWB Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>