force-app/main/default/objects/Linehaul__c/fields/Bag_Number__c.field-meta.xml
<CustomField>
    <fullName>Bag_Number__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Bag Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>