force-app/main/default/objects/Linehaul__c/fields/Booked_Flight_For_AWB__c.field-meta.xml
<CustomField>
    <fullName>Booked_Flight_For_AWB__c</fullName>
    <label>Booked Flight For AWB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>