force-app/main/default/objects/Linehaul__c/fields/Commodity_Code__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Code__c</fullName>
    <formula>Commodity_Name__r.Commodity_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commodity Code</label>
    <type>Text</type>
</CustomField>