force-app/main/default/objects/Linehaul__c/fields/Commodity_Description__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Description__c</fullName>
    <formula>Commodity_Name__r.Commodity_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commodity Description</label>
    <type>Text</type>
</CustomField>