force-app/main/default/objects/Linehaul__c/fields/Commodity_Name__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commodity Name</label>
    <referenceTo>Indigo_Commodity_Master__c</referenceTo>
    <relationshipLabel>Linehauls</relationshipLabel>
    <relationshipName>Linehauls</relationshipName>
    <type>Lookup</type>
</CustomField>