force-app/main/default/objects/Linehaul__c/fields/Consignee_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Account_Code__c</fullName>
    <label>Consignee Account Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>