force-app/main/default/objects/Linehaul__c/fields/Consignee_Account_Code_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Account_Code_Picklist__c</fullName>
    <label>Consignee Account Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Consignee_City_Picklist__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GOIBVC</fullName>
            </value>
            <value>
                <fullName>TRVBVC</fullName>
            </value>
            <value>
                <fullName>HYDBVC</fullName>
            </value>
            <value>
                <fullName>CJBBVC</fullName>
            </value>
            <value>
                <fullName>PNQBVC</fullName>
            </value>
            <value>
                <fullName>BOMBVC</fullName>
            </value>
            <value>
                <fullName>BBIBVC</fullName>
            </value>
            <value>
                <fullName>JAIBVC</fullName>
            </value>
            <value>
                <fullName>AMDBVC</fullName>
            </value>
            <value>
                <fullName>IXRBVC</fullName>
            </value>
            <value>
                <fullName>MAABVC</fullName>
            </value>
            <value>
                <fullName>IDRBVC</fullName>
            </value>
            <value>
                <fullName>NAGBVC</fullName>
            </value>
            <value>
                <fullName>PATBVC</fullName>
            </value>
            <value>
                <fullName>CCJBVC</fullName>
            </value>
            <value>
                <fullName>IXCBVC</fullName>
            </value>
            <value>
                <fullName>RPRBVC</fullName>
            </value>
            <value>
                <fullName>COKBVC</fullName>
            </value>
            <value>
                <fullName>CCUBVC</fullName>
            </value>
            <value>
                <fullName>BLRBVC</fullName>
            </value>
            <value>
                <fullName>VTZBVC</fullName>
            </value>
            <value>
                <fullName>LKOBVC</fullName>
            </value>
            <value>
                <fullName>VNSBVC</fullName>
            </value>
            <value>
                <fullName>IXEBVC</fullName>
            </value>
            <value>
                <fullName>DELBVC</fullName>
            </value>
            <value>
                <fullName>STVBVC</fullName>
            </value>
            <value>
                <fullName>IXJBVCL</fullName>
            </value>
            <value>
                <fullName>HBXBVCL</fullName>
            </value>
            <value>
                <fullName>GAUBVCL</fullName>
            </value>
            <value>
                <fullName>BVCLVGA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>