force-app/main/default/objects/Linehaul__c/fields/Consignee_Account_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Account_Code_Text__c</fullName>
    <label>Consignee Account Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>