force-app/main/default/objects/Linehaul__c/fields/Consignee_Address_SpiceJet__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Address_SpiceJet__c</fullName>
    <formula>Shipper_Consignee_Detail_SpiceJet__r.Consignee_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consignee Address</label>
    <type>Text</type>
</CustomField>