force-app/main/default/objects/Linehaul__c/fields/Consignee_Agent_Code_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Agent_Code_Picklist__c</fullName>
    <label>Consignee Agent Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Consignee_Account_Code_Picklist__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BVCLGOIDOM</fullName>
            </value>
            <value>
                <fullName>BVCLTRVDOM</fullName>
            </value>
            <value>
                <fullName>BVCLHYDDOM</fullName>
            </value>
            <value>
                <fullName>BVCLCJBDOM</fullName>
            </value>
            <value>
                <fullName>BVCLPNQDOM</fullName>
            </value>
            <value>
                <fullName>BVCLBOMDOM</fullName>
            </value>
            <value>
                <fullName>BVCLBBIDOM</fullName>
            </value>
            <value>
                <fullName>BVCLJAIDOM</fullName>
            </value>
            <value>
                <fullName>BVCLAMDDOM</fullName>
            </value>
            <value>
                <fullName>BVCLIXRDOM</fullName>
            </value>
            <value>
                <fullName>BVCLMAADOM</fullName>
            </value>
            <value>
                <fullName>BVCLIDRDOM</fullName>
            </value>
            <value>
                <fullName>BVCLNAGDOM</fullName>
            </value>
            <value>
                <fullName>BVCLPATDOM</fullName>
            </value>
            <value>
                <fullName>BVCLCCJDOM</fullName>
            </value>
            <value>
                <fullName>BVCLIXCDOM</fullName>
            </value>
            <value>
                <fullName>BVCLRPRDOM</fullName>
            </value>
            <value>
                <fullName>BVCLCOKDOM</fullName>
            </value>
            <value>
                <fullName>BVCLCCUDOM</fullName>
            </value>
            <value>
                <fullName>BVCLBLRDOM</fullName>
            </value>
            <value>
                <fullName>BVCLVTZDOM</fullName>
            </value>
            <value>
                <fullName>BVCLLKODOM</fullName>
            </value>
            <value>
                <fullName>BVCLVNSDOM</fullName>
            </value>
            <value>
                <fullName>BVCLIXEDOM</fullName>
            </value>
            <value>
                <fullName>BVCLDELDOM</fullName>
            </value>
            <value>
                <fullName>BVCLSTVDOM</fullName>
            </value>
            <value>
                <fullName>BVCLIXJDOM</fullName>
            </value>
            <value>
                <fullName>BVCLHBXDOM</fullName>
            </value>
            <value>
                <fullName>BVCLGAUDOM</fullName>
            </value>
            <value>
                <fullName>BVCLVGADOM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>