force-app/main/default/objects/Linehaul__c/fields/Consignee_City__c.field-meta.xml
<CustomField>
    <fullName>Consignee_City__c</fullName>
    <label>Consignee City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>