force-app/main/default/objects/Linehaul__c/fields/Consignee_City_SpiceJet__c.field-meta.xml
<CustomField>
    <fullName>Consignee_City_SpiceJet__c</fullName>
    <formula>Shipper_Consignee_Detail_SpiceJet__r.Consignee_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consignee City</label>
    <type>Text</type>
</CustomField>