force-app/main/default/objects/Linehaul__c/fields/Consignee_City_Text__c.field-meta.xml
<CustomField>
    <fullName>Consignee_City_Text__c</fullName>
    <label>Consignee City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>