force-app/main/default/objects/Linehaul__c/fields/Consignee_Contact_No_SpiceJet__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Contact_No_SpiceJet__c</fullName>
    <formula>Shipper_Consignee_Detail_SpiceJet__r.Consignee_Contact_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consignee Contact No</label>
    <type>Text</type>
</CustomField>