force-app/main/default/objects/Linehaul__c/fields/Consignee_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Contact_Number__c</fullName>
    <label>Consignee Contact Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>