force-app/main/default/objects/Linehaul__c/fields/Consignee_Email_SpiceJet__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Email_SpiceJet__c</fullName>
    <formula>Shipper_Consignee_Detail_SpiceJet__r.Consignee_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consignee Email</label>
    <type>Text</type>
</CustomField>