force-app/main/default/objects/Linehaul__c/fields/Consignee_EmailID__c.field-meta.xml
<CustomField>
    <fullName>Consignee_EmailID__c</fullName>
    <label>Consignee EmailID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>