force-app/main/default/objects/Linehaul__c/fields/Consignee_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Latitude__c</fullName>
    <label>Consignee Latitude</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>