force-app/main/default/objects/Linehaul__c/fields/Consignee_Name_SpiceJet__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Name_SpiceJet__c</fullName>
    <formula>Shipper_Consignee_Detail_SpiceJet__r.Consignee_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consignee Name</label>
    <type>Text</type>
</CustomField>