force-app/main/default/objects/Linehaul__c/fields/Consignee_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Pincode__c</fullName>
    <label>Consignee Pincode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>