force-app/main/default/objects/Linehaul__c/fields/Consignee_Pincode_SpiceJet__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Pincode_SpiceJet__c</fullName>
    <formula>Shipper_Consignee_Detail_SpiceJet__r.Consignee_Pincode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consignee Pincode</label>
    <type>Text</type>
</CustomField>