force-app/main/default/objects/Linehaul__c/fields/Consignee_State__c.field-meta.xml
<CustomField>
    <fullName>Consignee_State__c</fullName>
    <label>Consignee State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>