force-app/main/default/objects/Linehaul__c/fields/Consignee_State_Code_SpiceJet__c.field-meta.xml
<CustomField>
    <fullName>Consignee_State_Code_SpiceJet__c</fullName>
    <formula>Shipper_Consignee_Detail_SpiceJet__r.Consignee_State_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consignee State Code</label>
    <type>Text</type>
</CustomField>