force-app/main/default/objects/Linehaul__c/fields/Declared_Value__c.field-meta.xml
<CustomField>
    <fullName>Declared_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Declared Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>