force-app/main/default/objects/Linehaul__c/fields/Destination_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>Destination_Airport_Code__c</fullName>
    <formula>Flight_No_for_SpiceJet_Indigo__r.Destination_Airport__r.Airport_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Airport Code</label>
    <type>Text</type>
</CustomField>