force-app/main/default/objects/Linehaul__c/fields/Dimension_Type__c.field-meta.xml
<CustomField>
    <fullName>Dimension_Type__c</fullName>
    <defaultValue>&quot;CMS&quot;</defaultValue>
    <label>Dimension Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>