force-app/main/default/objects/Linehaul__c/fields/Dv_Custom__c.field-meta.xml
<CustomField>
    <fullName>Dv_Custom__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Dv Custom</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>