force-app/main/default/objects/Linehaul__c/fields/Flight_Code__c.field-meta.xml
<CustomField>
    <fullName>Flight_Code__c</fullName>
    <label>Flight Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>