force-app/main/default/objects/Linehaul__c/fields/Flight_Destination__c.field-meta.xml
<CustomField>
    <fullName>Flight_Destination__c</fullName>
    <label>Flight Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>