force-app/main/default/objects/Linehaul__c/fields/Flight_No_for_SpiceJet_Indigo__c.field-meta.xml
<CustomField>
    <fullName>Flight_No_for_SpiceJet_Indigo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flight No for SpiceJet/Indigo</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please Select Correct Flight or which has Departure Date of Today or Greater.</errorMessage>
        <filterItems>
            <field>$Source.Select_Airline__c</field>
            <operation>contains</operation>
            <valueField>Flight_Schedule__c.Airline_Name__r.Name</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Flight_Schedule__c</referenceTo>
    <relationshipLabel>Linehauls</relationshipLabel>
    <relationshipName>Linehauls</relationshipName>
    <type>Lookup</type>
</CustomField>