force-app/main/default/objects/Linehaul__c/fields/Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number__c</fullName>
    <label>Flight Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>