force-app/main/default/objects/Linehaul__c/fields/Flight_Origin__c.field-meta.xml
<CustomField>
    <fullName>Flight_Origin__c</fullName>
    <label>Flight Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>