force-app/main/default/objects/Linehaul__c/fields/Length_Dimension__c.field-meta.xml
<CustomField>
    <fullName>Length_Dimension__c</fullName>
    <label>Length Dimension</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>