force-app/main/default/objects/Linehaul__c/fields/Login_Name__c.field-meta.xml
<CustomField>
    <fullName>Login_Name__c</fullName>
    <label>Login Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>