force-app/main/default/objects/Linehaul__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <defaultValue>&quot;BVC&quot;</defaultValue>
    <label>Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>