force-app/main/default/objects/Linehaul__c/fields/Multi_Leg_Routes__c.field-meta.xml
<CustomField>
    <fullName>Multi_Leg_Routes__c</fullName>
    <label>Multi-Leg Routes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>