force-app/main/default/objects/Linehaul__c/fields/Origin_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>Origin_Airport_Code__c</fullName>
    <formula>Flight_No_for_SpiceJet_Indigo__r.Origin_Airport__r.Airport_Code__c</formula>
    <label>Origin Airport Code</label>
    <type>Text</type>
</CustomField>