force-app/main/default/objects/Linehaul__c/fields/Packaging_Info__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Info__c</fullName>
    <label>Packaging Info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>