force-app/main/default/objects/Linehaul__c/fields/Pcs_Int__c.field-meta.xml
<CustomField>
    <fullName>Pcs_Int__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Pcs Int</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>