force-app/main/default/objects/Linehaul__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <defaultValue>&apos;General&apos;</defaultValue>
    <label>Product Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>