force-app/main/default/objects/Linehaul__c/fields/Route_Type__c.field-meta.xml
<CustomField>
    <fullName>Route_Type__c</fullName>
    <defaultValue>&quot;Air&quot;</defaultValue>
    <label>Route Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>