force-app/main/default/objects/Linehaul__c/fields/Schedule_ID__c.field-meta.xml
<CustomField>
    <fullName>Schedule_ID__c</fullName>
    <label>Schedule ID</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>