force-app/main/default/objects/Linehaul__c/fields/Select_Airline__c.field-meta.xml
<CustomField>
    <fullName>Select_Airline__c</fullName>
    <label>Select Airline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indigo</fullName>
            </value>
            <value>
                <fullName>SPICEJET</fullName>
            </value>
            <value>
                <fullName>AIR ASIA</fullName>
            </value>
            <value>
                <fullName>GO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>