force-app/main/default/objects/Linehaul__c/fields/SHC_Code__c.field-meta.xml
<CustomField>
    <fullName>SHC_Code__c</fullName>
    <formula>Commodity_Name__r.SHC_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SHC Code</label>
    <type>Text</type>
</CustomField>