force-app/main/default/objects/Linehaul__c/fields/Shipper_Address_SpiceJet__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Address_SpiceJet__c</fullName>
    <formula>Shipper_Consignee_Detail_SpiceJet__r.Shipper_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipper Address</label>
    <type>Text</type>
</CustomField>