force-app/main/default/objects/Linehaul__c/fields/Shipper_City_SpiceJet__c.field-meta.xml
<CustomField>
    <fullName>Shipper_City_SpiceJet__c</fullName>
    <formula>Shipper_Consignee_Detail_SpiceJet__r.Shipper_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipper City</label>
    <type>Text</type>
</CustomField>