force-app/main/default/objects/Linehaul__c/fields/Shipper_Code_SpiceJet__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Code_SpiceJet__c</fullName>
    <formula>Shipper_Consignee_Detail_SpiceJet__r.Shipper_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipper Code</label>
    <type>Text</type>
</CustomField>