force-app/main/default/objects/Linehaul__c/fields/Shipper_Consignee_Detail_SpiceJet__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Consignee_Detail_SpiceJet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipper/Consignee Detail SpiceJet</label>
    <referenceTo>Shipper_Consignee_Detail_SpiceJet__c</referenceTo>
    <relationshipLabel>Linehauls</relationshipLabel>
    <relationshipName>Linehauls</relationshipName>
    <type>Lookup</type>
</CustomField>