force-app/main/default/objects/Linehaul__c/fields/Shipper_Contact_No_SpiceJet__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Contact_No_SpiceJet__c</fullName>
    <formula>Shipper_Consignee_Detail_SpiceJet__r.Shipper_Contact_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipper Contact No</label>
    <type>Text</type>
</CustomField>