force-app/main/default/objects/Linehaul__c/fields/Shipper_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Contact_Number__c</fullName>
    <label>Shipper Contact Number</label>
    <type>Phone</type>
</CustomField>