force-app/main/default/objects/Linehaul__c/fields/Shipper_Email_SpiceJet__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Email_SpiceJet__c</fullName>
    <formula>Shipper_Consignee_Detail_SpiceJet__r.Shipper_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipper Email</label>
    <type>Text</type>
</CustomField>