force-app/main/default/objects/Linehaul__c/fields/Shipper_EmailID__c.field-meta.xml
<CustomField>
    <fullName>Shipper_EmailID__c</fullName>
    <label>Shipper EmailID</label>
    <type>Email</type>
</CustomField>