force-app/main/default/objects/Linehaul__c/fields/Shipper_Name_SpiceJet__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Name_SpiceJet__c</fullName>
    <formula>Shipper_Consignee_Detail_SpiceJet__r.Shipper_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipper Name</label>
    <type>Text</type>
</CustomField>