force-app/main/default/objects/Linehaul__c/fields/Shipper_Pincode_SpiceJet__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Pincode_SpiceJet__c</fullName>
    <formula>Shipper_Consignee_Detail_SpiceJet__r.Shipper_Pincode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipper Pincode</label>
    <type>Text</type>
</CustomField>