force-app/main/default/objects/Linehaul__c/fields/Shipping_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Account_Code__c</fullName>
    <label>Shipping Account Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>